<resources>
    <string name="app_name">Firebase Fish Tracker</string>
    <string name="fish_caught">Fish caught so far...</string>
    <string name="add_fish">Add a fish</string>
    <string name="fish_details">Fish Details</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="please_enter_email">Please Enter Email</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="buttonLogin">Login</string>
    <string name="ButtonCreate">Create an Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
</resources>
